syntax = "proto3";


package app.config.window;

enum EWindowType {
  kFullscreen = 0;
  kWindowed = 1;
  kBorderless = 2;
}

message WindowConfig {
  int64 resolution = 3;
  EWindowType type = 4;
}
